# basic-dev-env

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_jupyter.sh
docker/: Dockerfile
jupyterlab/: kernel.json  sample_debugging.ipynb
src/: sample.py
test/: test_sample.py
