[project]
name = "basic-dev-env"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "debugpy>=1.8.17",
    "flake8>=7.3.0",
    "pytest>=9.0.0",
]
